# rust-crud-server

./: .env  Cargo.toml  README.md  dev.sh  example.http
src/: config.rs  database.rs  main.rs
src/todos/: mod.rs  model.rs  repository.rs  service.rs  todo.rs
