[package]
name = "rust-crud-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
serde = { version = "1.0",  features = ["derive"] }
mongodb = "2.3.0"
dotenvy = "0.15"
tokio = "1.21"
tokio-stream = "0.1"
env_logger = "0.9"
log = "0.4"